[package]
name = "mutant_ants"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
plotters = "0.3.5"
rand = "0.8"
prettytable-rs = "0.10.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "robust"
harness = false
html-reports = true
